# icors

./: .gitignore  Cargo.toml
src/: lib.rs  parse.rs
tests/: dcat-metadata.sparql  resubmitted.sparql  spargebra.rs
